<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.alpha.siminfo.viettel.RecallFragment">

    <TextView
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:gravity="bottom"
        android:layout_width="wrap_content"
        android:layout_gravity="bottom"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/phone_number"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:id="@+id/phone_number"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_toLeftOf="@+id/select_contact_button"
        android:layout_alignLeft="@+id/sender_name"
        android:layout_alignStart="@+id/sender_name" />
    <ImageButton
        android:id="@+id/select_contact_button"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:background="@drawable/contact"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onSelectContact"
        android:layout_above="@+id/sender_name" />

    <com.alpha.siminfo.view.CircleButton
        android:id="@+id/OK_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:text="@string/transfer"
        app:background_color="@color/green_dark"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/sender_name"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/sender_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:ems="10"
        android:id="@+id/sender_name"
        android:layout_below="@+id/phone_number"
        android:layout_alignRight="@+id/select_contact_button"
        android:layout_alignEnd="@+id/select_contact_button" />
</RelativeLayout>
